Fixed backgrounds on mobile! :tada: (I think :P)
Was because of lack of support for background-attachment: fixed. So I
made pseduo-elements and gave them position: fixed and got them to act
as the backgrounds

--- a/style.css
+++ b/style.css
@@ -535,11 +535,25 @@ body.home .share, body.contact .share {
 
 /* New styles */
 
-body, header {
+body:before, header:before {
     background-image: linear-gradient(45deg,transparent,#F5F5F5),linear-gradient(120deg, #fccb90 0%, #d57eeb 100%) !important;
     background-attachment: fixed !important;
     background-size: 100vw !important;
     background-repeat: no-repeat !important;
+}
+
+body:before, header:before {
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    z-index: -999;
+}
+
+header:before {
+    clip: rect(0,100vw,60px,0);
 }
 
 /* .logo {
